--- a/lesson2/main.css
+++ b/lesson2/main.css
@@ -8,7 +8,7 @@ body{
 
 
    box-sizing: border-box;
-    padding-left: 40px;
+    padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 90px;
     padding-top: 130px;
@@ -17,5 +17,10 @@ border: 10px solid indigo;
     border-radius: 10px;
     border-top-left-radius: 100px;
     margin: 0 auto;
-
+    box-shadow: black 10px 20px 30px 40px;
+transition: 3s;
+}
+.target:hover{
+    height: 500px;
+    transition: 300ms;
 }
