--- a/verstka/main.css
+++ b/verstka/main.css
@@ -8,6 +8,7 @@ body{
 }
 :root{
     --black-color: #000;
+    --grey-color: #ccc;
 }
 .wrapper{
     max-width: 1150px;
@@ -17,6 +18,7 @@ body{
     height: 80px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .header{
     border-bottom: 1px solid #EAEEF2;
@@ -112,6 +114,56 @@ body{
     cursor: pointer;
     transition: box-shadow.35s ;
 }
+.mobile_button{
+    width: 45px;
+    height: 45px;
+    background-color: transparent;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 5px;
+    cursor: pointer;
+    transition: box-shadow.35s;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.mobile_button:hover {
+    box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.75);
+}
+.mobile_button span{
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 5px;
+    border-radius: 5px;
+    background-color: var(--grey-color);
+}
+.mobile_button span::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: var(--grey-color) ;
+    position: absolute;
+    top: -10px;
+    border-radius: 5px;
+}
+.mobile_button span::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: var(--grey-color) ;
+    position: absolute;
+    top: 10px;
+    border-radius: 5px;
+}
+
 .header_button_bottom:hover {
     box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.75);
