--- a/verstka/media.css
+++ b/verstka/media.css
@@ -32,6 +32,166 @@
     width: 488px;
 }
 .img_content_second{
-    margin-top: 100px;
+    display: none;
+}
+.text_content_second{
+    margin: 80px 10px 10px 10px;
+}
+.text_content_title,
+.text_title_third,
+.main_title_pink,
+.title_six,
+.text_area{
+    font-size: 40px;
+    height: 100px;
+    line-height: 40px;
+}
+.some_text_second{
+    margin-top: 0;
+    width: 100%;
+}
+.third_block{
+    width: 488px;
+    position: relative;
+    bottom: 80px;
+}
+.third_content{
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px 0 10px;
+}
+.text_title_third{
+   margin: 0 10px 0 10px;
+   text-align: center;
+    height: 70px;
+}
+.button_third{
+   margin-left: 25%;
+    margin-top: 0;
+    cursor: pointer;
+}
+.software>img,
+.cashflow>img,
+.support>img{
+    display: none;
+}
+.software h1,
+.cashflow h1,
+.support h1{
+    text-align: center;
+    margin: 10px;
+}
+    .software p,
+    .cashflow p,
+    .support p{
+        width: 100%;
+        min-width: auto;
+    }
+.pink_block_header{
+    width: 488px;
+    height: 600px;
+    margin: 10px 0;
+}
+.main_title_pink{
+    text-align: center;
+    height: 70px;
+}
+.pink_block{
+    position: relative;
+    padding-top: 40px;
+    margin: 10px 10px;
+}
+.inside_content{
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+}
+.startup>img,
+.up>img,
+.growth>img{
+    display: none;
+}
+.fifth_block{
+    margin: 10px 10px;
+    width: 488px;
+    display: flex;
+    flex-direction: column;
+}
+.head_text{
+    text-align: center;
+    width: 100%;
+}
+.six_block{
+    margin: 10px 10px;
+    width: 488px;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+}
+.title_six{
+    margin-top: 30px;
+    height: 50px;
+}
+.text_six{
+    width: 100%;
+}
+.button_six{
+    margin-left: 35%;
+}
+.image_side>img{
+    display: none;
+}
+.seven_block{
+    width: 488px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+}
+    .blue_block{
+        width: 488px;
+        display: flex;
+        flex-direction: column;
+    }
+    .text_area{
+        margin-top: 50px;
+    }
+    .button_seven{
+        margin-left: 35%;
+        margin-top: 50px;
+    }
+    .seven_title{
+        font-size: 40px;
+        height: 70px;
+        line-height: 40px;
+        margin-right: 70px;
+    }
+.seven_text{
+    margin-top: 30px;
+}
+.final_block_header{
+    width: 488px;
+    height: 800px;
+}
+.final_block{
+    margin: 10px;
+}
+.context,
+.text_zone{
+    display: flex;
+    flex-wrap: wrap;
+}
+.column{
+    margin-top: 10px;
+}
+.column.mt81{
+    margin-left: 250px;
+    position: relative;
+    bottom: 120px;
+}
+.additional{
+    position: relative;
+    bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 }
